copy deployment files to dist/app; added bootstrap

--- a/src/app.html
+++ b/src/app.html
@@ -1,3 +1,23 @@
 <template>
   <h1>${message}</h1>
+  Tools used
+  - Aurelia (Alternatives: Angular, React, Svelte, Vue, etc... or no framework)
+  - Yarn
+  - Node.js LTS and Git
+  - GitHub
+  - Visual Studio Code
+
+  Steps taken
+- Created a repo on GitHub
+  - Cloned the repo
+- Created Aurelia app
+  - cd azure-static-web-app
+  - au new app-name --here
+  - yarn install
+  - au run --watch 
+  - commit and push
+- Create a Static Web App on Azure Portal
+
+<iframe src="https://channel9.msdn.com/Events/Build/2020/INT159/player" width="960" height="540" allowFullScreen frameBorder="0" title="From code to scale! Build a static web app in minutes - Microsoft Channel 9 Video"></iframe>
+
 </template>
